argocd/applications/observability/tailscale-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-grafana-tailscale
  namespace: observability
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana.ide-newton.ts.net
  rules:
    - host: grafana.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-mimir-tailscale
  namespace: observability
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - mimir.ide-newton.ts.net
  rules:
    - host: mimir.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-mimir-gateway
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-loki-tailscale
  namespace: observability
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - loki.ide-newton.ts.net
  rules:
    - host: loki.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-loki-loki-distributed-gateway
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-tempo-tailscale
  namespace: observability
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - tempo.ide-newton.ts.net
  rules:
    - host: tempo.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-tempo-gateway
                port:
                  number: 80
